feat: use jslt for beacon v2 api (#3411)
* Add jslt dependency

* Basic jslt to map individuals

* Move list

* Fetch all data from db and map using jslt file

* Recursively get all columns for table

* updated jslt files

* Generalized data fetch for different data types

* Extracted new code from old lib

* Generalized more entity types

* Generalized data fetch for different data types

* Added pagination

* Changed API class

* Updated filters

* Added unsupported filters to info response

* Added filter functionality

* Added filter functionality

* Added filter functionality

* Added permitted values to filters

* Implemented postFetch filters

* Added some tests

* Updated filters

* Added missing references to fair model

* Added genomic variant as jslt

* Refactor QueryEntryType

* Added permitted search concepts check

* foreach to stream

* formatting

* Generalized genomic variant fetch

* updated pagination and meta info

* update for g_variants and handling filters

* Enhanced response granularity

* Updated test

* Updated dependency

* Added tests

* Added tests

* Fix: added empty resultSet if no hits

* fix: dataset as collection in jslt

* updated beacon model

* updated beacon model

* Updated fair model

* Added test & resolved bugs

* Update beacon v2 entry types, apply filter rules, add tests

* fix: fixed bug when empty result on filter

* fix: fixed bug when empty result on filter

* fix: fixed bug when empty result on filter

* fix: fixed bug when empty result on filter

* changes max query depth

* Added unit tests

* Added unit tests

* Added unit tests

* Added unit tests

* Added unit tests

* Updated map endpoint info

* fix: limit 0 should return all results (+test)

* fix: fixed posting request parameters

* Made query class non static

* Fix bug in map test

* Formatting

* Separated VP en regular spec

* Separated V