@@ -180,6 +180,7 @@ public class GraphqlTableFieldFactory {
       case UUID:
       case DATE:
       case DATETIME:
+      case PERIOD:
       case EMAIL:
       case HYPERLINK:
         tableBuilder.field(
@@ -192,6 +193,7 @@ public class GraphqlTableFieldFactory {
       case LONG_ARRAY:
       case DATE_ARRAY:
       case DATETIME_ARRAY:
+      case PERIOD_ARRAY:
       case UUID_ARRAY:
       case JSONB_ARRAY:
         tableBuilder.field(
@@ -496,11 +498,13 @@ public class GraphqlTableFieldFactory {
         return Scalars.GraphQLFloat;
       case DATE,
           DATETIME,
+          PERIOD,
           STRING,
           TEXT,
           UUID,
           DATE_ARRAY,
           DATETIME_ARRAY,
+          PERIOD_ARRAY,
           STRING_ARRAY,
           TEXT_ARRAY,
           EMAIL_ARRAY,
@@ -520,9 +524,7 @@ public class GraphqlTableFieldFactory {
       if (entry.getKey().equals(FILTER_OR) || entry.getKey().equals(FILTER_AND)) {
         List<Map<String, Object>> nested = (List<Map<String, Object>>) entry.getValue();
         List<Filter> nestedFilters =
-            nested.stream()
-                .map(m -> and(convertMapToFilterArray(table, m)))
-                .collect(Collectors.toList());
+            nested.stream().map(m -> and(convertMapToFilterArray(table, m))).toList();
         if (entry.getKey().equals(FILTER_OR)) {
           subFilters.add(or(nestedFilters.toArray(new Filter[nestedFilters.size()])));
         } else {
@@ -544,7 +546,7 @@ public class GraphqlTableFieldFactory {
             table.getColumns().stream()
                 .filter(c -> c.getIdentifier().equals(entry.getKey()))
                 .findFirst();
-        if (!optional.isPresent())
+        if (optional.isEmpty())
           throw new GraphqlException(
               "Graphql API error: Column "
                   + entry.getKey()
@@ -744,7 +746,7 @@ public class GraphqlTableFieldFactory {
             .type(typeForMutationResult)
             .dataFetcher(fetcher(schema, type));
     for (TableMetadata table : schema.getMetadata().getTables()) {
-      if (table.getColumnsWithoutHeadings().size() > 0) {
+      if (!table.getColumnsWithoutHeadings().isEmpty()) {
         fieldBuilder.argument(
             GraphQLArgument.newArgument()
                 .name(table.getIdentifier())
@@ -883,7 +885,7 @@ public class GraphqlTableFieldFactory {
       case INT -> Scalars.GraphQLInt;
       case LONG -> GraphQLLong;
       case DECIMAL -> Scalars.GraphQLFloat;
-      case UUID, STRING, TEXT, DATE, DATETIME -> Scalars.GraphQLString;
+      case UUID, STRING, TEXT, DATE, DATETIME, PERIOD -> Scalars.GraphQLString;
       case BOOL_ARRAY -> GraphQLList.list(Scalars.GraphQLBoolean);
       case INT_ARRAY -> GraphQLList.list(Scalars.GraphQLInt);
       case LONG_ARRAY -> GraphQLList.list(GraphQLLong);
@@ -892,6 +894,7 @@ public class GraphqlTableFieldFactory {
           TEXT_ARRAY,
           DATE_ARRAY,
           DATETIME_ARRAY,
+          PERIOD_ARRAY,
           UUID_ARRAY,
           EMAIL_ARRAY,
           HYPERLINK_ARRAY -> GraphQLList.list(Scalars.GraphQLString);
